# design_project_wifi_module

./: README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  gpio_isr_example.c  https example.c  https_request_example_main.c  struct AMessage.c  struct AMessage1.c  take_picture.c  take_picture_old.c  task_stats.c  test_images.c  wifi_connect.c
main/include/: message.h  test_images.h
